navbar test ediliyor

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,16 @@
+:root{
 
+
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+}
+
+.flex {
+    display: flex;
+    
+}
