--- a/client/src/assests/css/footer.css
+++ b/client/src/assests/css/footer.css
@@ -2,24 +2,32 @@ h4{
     width: var(--size-full);
     
 }
-.footer-item{
-    flex-direction: column;
-    align-items: flex-start;
-}
-.footer-item .navbar{
-    /* height: 100%; */
+.footer-side{
     flex-direction: column;
     align-items: flex-start;
 }
 
-.footer-item ul {
+
+.footer-side .footer-item{
     flex-direction: column;
+    align-items: flex-start;
 }
 
-.footer-item ul li a {
-   color: white;
+.footer-side .map iframe{
+    width: var(--size-full);
+    border: 1px solid rgb(168, 165, 165);
 }
 
-.footer-item .navbar-logo{
-    display: none;
-}
+@media screen and (min-width: 400px ) {
+    .footer-side .map iframe{
+        width: var(--size-full);
+        
+    }
+  }
+  
+  @media screen and (min-width: 800px ) {
+    .footer-side .map iframe{
+        width: 600px;
+        height: 400px;
+    }
+  }
