--- a/client/src/assests/css/index.css
+++ b/client/src/assests/css/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 
 :root {
+  --white-bg: rgb(255, 255, 255);
   --card-light: rgb(250, 250, 250);
   --body-bg-light: rgb(234, 234, 234);
   --global-bg-dark: rgb(35, 35, 35);
@@ -12,7 +13,8 @@
   --dark-color: rgb(47, 47, 47);
   --light-color-hover: rgb(121, 121, 121);
   --icon: rgb(121, 121, 121);
-  --light-bg-hover: rgb(210, 208, 208);
+  --light-bg-hover: rgb(240, 240, 240);
+  --li-box-shadow:rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   --navbar-dark-bg: rgb(35, 35, 35);
   --navbar-light-bg: rgb(250, 250, 250);
   --navbar-box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
@@ -21,7 +23,7 @@
   --light-border: 1px solid rgb(186, 186, 186);
   --dark-border: 1px solid rgb(77, 77, 77);
 
-
+  --light-bg: rgb(210, 208, 208);;
   --display-1: 0.5rem 0.25rem;
   --display-2: 1rem 0.5rem;
   --display-3: 2rem 1rem;
@@ -44,6 +46,7 @@
 --linear-color-2: linear-gradient(to right top, #255f5a, #205c57, #1b5a54, #165752, #10554f, #0d514b, #0a4c47, #074843, #08403c, #093935, #0a312f, #0a2a28);
 --linear-color-3: linear-gradient(to right top, #0f403c, #11534e, #126760, #127b73, #109086, #0f9187, #0d9187, #0b9288, #0c7e76, #0c6b64, #0b5853, #0a4642);
 --linear-color-4:  linear-gradient(to right top, #0e1521, #0f1c29, #0d2331, #0a2a39, #053140);
+--linear-color-5: linear-gradient(to right top, #d6d8da, #dbdcde, #e0e1e2, #e5e5e6, #eaeaea, #ededed, #f1f1f1, #f4f4f4, #f7f7f7, #f9f9f9, #fcfcfc, #ffffff);
 --box-shadow-1: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 --box-shadow-2: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
@@ -84,7 +87,7 @@ footer {
   position: relative;
   bottom: 0;
   width: var(--size-full);
-  background:var(--global-bg-dark);
+  background:var(--light-bg);
   color: var(--light-color);
   padding: 2rem;
 }
@@ -92,4 +95,5 @@ footer {
 .App-Container{
 position: relative;
  min-height: 95vh;
+ align-items: center;
 }
