--- a/client/src/assests/css/index.css
+++ b/client/src/assests/css/index.css
@@ -56,7 +56,7 @@
     padding: 0;
     list-style: none;
     font-family: 'Open Sans', sans-serif;
-    transition: 0.6s ease-in-out;
+    transition: 0.5s ease-in-out;
 }
 
 a{
@@ -79,10 +79,15 @@ nav {
   display: flex;
    width: var(--size-full); 
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   gap: 1rem;
 }
-
+.icon{
+  font-size: 2rem;
+}
+.icon:hover{
+ color:black
+}
 footer {
   min-height: 10rem;
   position: relative;
@@ -92,7 +97,18 @@ footer {
   color: var(--light-color);
   padding: 2rem;
 }
-
+.github{
+  color: rgb(28, 33, 40);
+}
+.javascript {
+  color: rgb(247, 224, 37);
+}
+.react{
+  color: rgb(16, 212, 255)
+}
+.nodejs{
+  color: rgb(83, 158, 67);
+}
 .App-Container{
 position: relative;
  min-height: 95vh;
