--- a/client/src/assests/css/index.css
+++ b/client/src/assests/css/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap");
 
 :root {
   --white-bg: rgb(255, 255, 255);
@@ -14,7 +14,7 @@
   --light-color-hover: rgb(121, 121, 121);
   --icon: rgb(121, 121, 121);
   --light-bg-hover: rgb(240, 240, 240);
-  --li-box-shadow:rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+  --li-box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   --navbar-dark-bg: rgb(35, 35, 35);
   --navbar-light-bg: rgb(250, 250, 250);
   --navbar-box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
@@ -22,8 +22,9 @@
   --input-border: 1px solid rgb(186, 186, 186);
   --light-border: 1px solid rgb(186, 186, 186);
   --dark-border: 1px solid rgb(77, 77, 77);
-
-  --light-bg: rgb(210, 208, 208);;
+  --border-icon: 3px solid rgb(13, 99, 92);
+  --icon-span-color: rgb(25, 112, 96);
+  --light-bg: rgb(210, 208, 208);
   --display-1: 0.5rem 0.25rem;
   --display-2: 1rem 0.5rem;
   --display-3: 2rem 1rem;
@@ -41,31 +42,111 @@
   --size-small: 70%;
   --size-form: 350px;
   --size-blog: 255px;
-  --linear-button : linear-gradient(to right top, #062c29, #0b3532, #103e3b, #164744, #1b504e, #1b504f, #1b514f, #1b5150, #164947, #10413f, #0b3a37, #06322f);
- --linear-color-1:linear-gradient(to right top, #062c29, #06332f, #063a36, #06413c, #064843, #0b4e49, #0f544e, #145a54, #1d605a, #256660, #2d6c67, #34726d);
---linear-color-2: linear-gradient(to right top, #255f5a, #205c57, #1b5a54, #165752, #10554f, #0d514b, #0a4c47, #074843, #08403c, #093935, #0a312f, #0a2a28);
---linear-color-3: linear-gradient(to right top, #0f403c, #11534e, #126760, #127b73, #109086, #0f9187, #0d9187, #0b9288, #0c7e76, #0c6b64, #0b5853, #0a4642);
---linear-color-4:  linear-gradient(to right top, #0e1521, #0f1c29, #0d2331, #0a2a39, #053140);
---linear-color-5: linear-gradient(to right top, #d6d8da, #dbdcde, #e0e1e2, #e5e5e6, #eaeaea, #ededed, #f1f1f1, #f4f4f4, #f7f7f7, #f9f9f9, #fcfcfc, #ffffff);
---box-shadow-1: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
---box-shadow-2: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  --linear-button: linear-gradient(
+    to right top,
+    #062c29,
+    #0b3532,
+    #103e3b,
+    #164744,
+    #1b504e,
+    #1b504f,
+    #1b514f,
+    #1b5150,
+    #164947,
+    #10413f,
+    #0b3a37,
+    #06322f
+  );
+  --linear-color-1: linear-gradient(
+    to right top,
+    #062c29,
+    #06332f,
+    #063a36,
+    #06413c,
+    #064843,
+    #0b4e49,
+    #0f544e,
+    #145a54,
+    #1d605a,
+    #256660,
+    #2d6c67,
+    #34726d
+  );
+  --linear-color-2: linear-gradient(
+    to right top,
+    #255f5a,
+    #205c57,
+    #1b5a54,
+    #165752,
+    #10554f,
+    #0d514b,
+    #0a4c47,
+    #074843,
+    #08403c,
+    #093935,
+    #0a312f,
+    #0a2a28
+  );
+  --linear-color-3: linear-gradient(
+    to right top,
+    #0f403c,
+    #11534e,
+    #126760,
+    #127b73,
+    #109086,
+    #0f9187,
+    #0d9187,
+    #0b9288,
+    #0c7e76,
+    #0c6b64,
+    #0b5853,
+    #0a4642
+  );
+  --linear-color-4: linear-gradient(
+    to right top,
+    #0e1521,
+    #0f1c29,
+    #0d2331,
+    #0a2a39,
+    #053140
+  );
+  --linear-color-5: linear-gradient(
+    to right top,
+    #d6d8da,
+    #dbdcde,
+    #e0e1e2,
+    #e5e5e6,
+    #eaeaea,
+    #ededed,
+    #f1f1f1,
+    #f4f4f4,
+    #f7f7f7,
+    #f9f9f9,
+    #fcfcfc,
+    #ffffff
+  );
+  --box-shadow-1: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  --box-shadow-2: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    font-family: 'Open Sans', sans-serif;
-    transition: 0.5s ease-in-out;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-family: "Open Sans", sans-serif;
+  transition: 0.5s ease-in-out;
 }
 
-a{
+a {
   text-decoration: none;
 
-  color: var(--global-bg-dark)
+  color: var(--global-bg-dark);
 }
-a:hover{
-  transition: .2s ease-in-out;
+a:hover {
+  transition: 0.2s ease-in-out;
   color: var(--light-color-hover);
 }
 nav {
@@ -77,40 +158,42 @@ nav {
 
 .flex {
   display: flex;
-   width: var(--size-full); 
+  width: var(--size-full);
   justify-content: center;
   align-items: center;
   gap: 1rem;
 }
-.icon{
+.icon {
   font-size: 2rem;
+  color:#063a36;
+  transition: .2s ease-in-out;
 }
-.icon:hover{
- color:black
+.icon:hover {
+  color: black;
 }
 footer {
   min-height: 10rem;
   position: relative;
   bottom: 0;
   width: var(--size-full);
-  background:var(--light-bg);
+  background: var(--light-bg);
   color: var(--light-color);
   padding: 2rem;
 }
-.github{
+.github:hover {
   color: rgb(28, 33, 40);
 }
-.javascript {
+.javascript:hover {
   color: rgb(247, 224, 37);
 }
-.react{
-  color: rgb(16, 212, 255)
+.react:hover {
+  color: rgb(16, 212, 255);
 }
-.nodejs{
+.nodejs:hover {
   color: rgb(83, 158, 67);
 }
-.App-Container{
-position: relative;
- min-height: 95vh;
- align-items: center;
+.App-Container {
+  position: relative;
+  min-height: 95vh;
+  align-items: center;
 }
