user ıntro created

--- a/client/src/assests/css/index.css
+++ b/client/src/assests/css/index.css
@@ -24,6 +24,7 @@
   --dark-border: 1px solid rgb(77, 77, 77);
   --border-icon: 3px solid rgb(13, 99, 92);
   --icon-span-color: rgb(25, 112, 96);
+  --icon-color: rgb(63, 72, 70);
   --light-bg: rgb(210, 208, 208);
   --display-1: 0.5rem 0.25rem;
   --display-2: 1rem 0.5rem;
