--- a/client/src/assests/css/main.css
+++ b/client/src/assests/css/main.css
@@ -18,6 +18,7 @@ header .header-content {
  
 }
 header .header-content .header-content-text {
+  align-items: flex-start;
   flex-direction: column;
   max-width: 20rem;
   gap: 0.3rem;
@@ -82,17 +83,17 @@ header .header-logo img {
 
 .project-btn {
   position: relative;
-  top: 1rem;
-  right: 0;
+  top: 0;
+  margin-top: 1rem;
   background: var(--linear-button);
   padding: var(--display-9);
   color: var(--light-color);
   border-radius: 2px;
+  transition: 0.4s top ease-in-out;
 }
 .project-btn:active {
-  top: 1.4rem;
+  top: .4rem;
   box-shadow: var(--button-box-shadow);
-  transition: 0.4s ease-in-out;
 }
 .project-btn:hover {
   color: var(--light-color);
@@ -145,9 +146,7 @@ header .header-logo img {
     header .header-content {
       margin-left: 2.5rem;
     }
-    .project-btn {
-      right: 3.5rem;
-    }
+
     header .header-logo .img-background{  
      left: 9rem;
      top:5rem;
