--- a/client/src/assests/css/skill.css
+++ b/client/src/assests/css/skill.css
@@ -1,172 +1,213 @@
-.skill-content{
-    flex-direction: column;
-    align-items: center;
-    margin: 2rem 0rem;
-    
+.skill-content {
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem 0rem;
 }
 .skill-content h2 {
   width: var(--size-full);
-      text-align: center;
-    }
-  
-.skill-content h4{
-    width: 4.5rem;
-    white-space: nowrap;
+  text-align: center;
 }
-.skill-content h5{
-    white-space: nowrap;
+
+.skill-content h4 {
+  width: 4.5rem;
+  white-space: nowrap;
 }
-.skill-content h2, h4 ,h5,p{
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    background-image: var(--linear-color-4);
+.skill-content h5 {
+  white-space: nowrap;
 }
-.skill-content .skill-container{
+.skill-content h2,
+h4,
+h5,
+p {
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  background-image: var(--linear-color-4);
+}
+.skill-content .skill-container {
   width: var(--size-xxl);
   flex-direction: column;
-  gap:0.1rem;
+  gap: 0.1rem;
   margin-top: 2rem;
 }
 
-
-.skill-content .skillcard-container{
+.skill-content .skillcard-container {
   flex-direction: column;
-
 }
 
-.skill-content .skillcard-container .skillcard-context{
- flex-direction: column;
-
+.skill-content .skillcard-container .skillcard-context {
+  flex-direction: column;
 }
-
 
 .skill-content .skillcard-container .skillcard-context p {
- text-transform: capitalize;
- font-size: 2rem;
- margin-left: 1rem;
- background-image: var(--linear-color-1);
- }
- .skill-content .skillcard-container .skillcard-context ul  {
-   align-items: flex-start;
-   justify-content: space-around;
-   flex-wrap: wrap;
-   width: var(--size-large);
-
-  }
+  text-transform: capitalize;
+  font-size: 2rem;
+  margin-left: 1rem;
+  background-image: var(--linear-color-1);
+}
+.skill-content .skillcard-container .skillcard-context ul {
+  align-items: flex-start;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: var(--size-large);
+}
 .skill-content .skillcard-container .skillcard-context ul li {
-   flex-direction: column;
-   width:9rem;
-   position: relative;
-  }
-  .skill-content .skillcard-container .skillcard-context ul li p {
-    font-size: 1rem;
-    font-weight: bold;
-    text-align: center;
-  }
-  .skill-content .skillcard-container .skillcard-context ul li .info-icon{
-    position: relative;
-    padding: 1rem;
-    border: var(--border-icon );
-    border-radius: 13rem;
-  }
-  .skill-content .skillcard-container .skillcard-context ul li .info-icon span{
-    position: absolute;
-    top: 3rem;
-    background: var(--white-bg);
-    font-size: 1.6rem;
-    color: var(--icon-span-color);
-    left: 1.6rem;
-  }
-  .skill-content .skillcard-container .skillcard-context ul li:nth-child(1) .info-icon span{
-    left: 1.1rem;
-  }
-  
+  flex-direction: column;
+  width: 9rem;
+  position: relative;
+}
+.skill-content .skillcard-container .skillcard-context ul li p {
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: center;
+}
+.skill-content .skillcard-container .skillcard-context ul li .info-icon {
+  position: relative;
+  padding: 1rem;
+  border: var(--border-icon);
+  border-radius: 13rem;
+}
+.skill-content .skillcard-container .skillcard-context ul li .info-icon span {
+  position: absolute;
+  top: 3rem;
+  background: var(--white-bg);
+  font-size: 1.6rem;
+  color: var(--icon-span-color);
+  left: 1.6rem;
+}
+.skill-content
+  .skillcard-container
+  .skillcard-context
+  ul
+  li:nth-child(1)
+  .info-icon
+  span {
+  left: 1.1rem;
+}
 
 .skill-content .skill-container .skill-item {
-    justify-content: space-around;
-    
-    gap: 0.2rem;
-    flex-direction: column;
-    
-  }
-.skill-content .skill-container .skill-item  .skill-item-header{
-    justify-content: flex-start;
-    align-items: center;
-    gap: 0;
+  justify-content: space-around;
+
+  gap: 0.2rem;
+  flex-direction: column;
 }
-  .skill-content .skill-container  .progress-bar {
-    width: var(--size-full);
-    height: 1rem;
-    border: 1px solid #999fac;
-    box-shadow: var(--box-shadow-2);
-    border-radius: 15px;
-    overflow: hidden;
-  }
-  
-  .skill-content .skill-container .progress-bar .progress {
-    height:var(--size-full);
-    background :var(--linear-color-3);
-  }
+.skill-content .skill-container .skill-item .skill-item-header {
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0;
+}
+.skill-content .skill-container .progress-bar {
+  width: var(--size-full);
+  height: 1rem;
+  border: 1px solid #999fac;
+  box-shadow: var(--box-shadow-2);
+  border-radius: 15px;
+  overflow: hidden;
+}
 
+.skill-content .skill-container .progress-bar .progress {
+  height: var(--size-full);
+  background: var(--linear-color-3);
+}
 
-  .IntroCard {
-    flex-direction: column;
-    width: var(--size-small);
-  }
-  .IntroCard h2{
-    margin-bottom: 1rem;
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    background-image: var(--linear-color-1);
-    
-  }
+.IntroCard {
+  flex-direction: column;
+  width: var(--size-xxl);
+}
+.IntroCard h2 {
+  margin-bottom: 1rem;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  background-image: var(--linear-color-1);
+}
 
-  .IntroCard img{
-    max-width: 400px;
-    margin: 2rem 0;
-  }
+.IntroCard img {
+  width: 100px;
+  margin: 2rem 0;
+}
 
+.IntroCard .soccial-icons {
+  margin-top: 2rem;
+  justify-content: space-around;
+  width: var(--size-small);
+}
+.IntroCard .soccial-icons .contact-icon {
+  font-size: 2rem;
+  color: var(--icon-color);
+}
+.IntroCard-contanier{
+  flex-direction: column;
+ }
+.right-card{
+ flex-direction: column-reverse;
+} 
+
+.intro-card-buttons {
+  flex-direction: column;
+  margin-bottom: 2rem;
+}
+
+@media screen and (min-width: 400px) {
+  .skill-content .skill-container {
+    width: var(--size-large);
+  }
+  .IntroCard img {
+    width: 300px;
+  }
   .IntroCard .soccial-icons {
-    margin-top: 2rem;
     justify-content: flex-start;
     gap: 2rem;
     width: var(--size-small);
   }
-  .IntroCard .soccial-icons .contact-icon{
-     font-size: 2rem;
-     color: var(--icon-color)
-  }
-  
-
-
-  @media screen and (min-width: 400px ) {
-    .skill-content .skill-container{
-        width: var(--size-large);
-       
-    }
-  }
- 
-  
-  @media  screen and (min-width: 900px) {
-    .skill-content{
-      flex-direction: row;
-      align-items: flex-start;
-  }
-  .skill-content .skill-container{
-    width: 400px;
 }
+@media screen and (min-width: 650px) {
+ .IntroCard-contanier{
+  flex-direction: row;
+ }
+}
+@media screen and (min-width: 900px) {
+  .skill-content {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+  .skill-content .skill-container {
+    width: 400px;
+  }
+  .IntroCard img {
+    width: 400px;
+  }
+  .intro-card-buttons {
+    flex-direction: column;
+    margin-bottom: 2rem;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
  
+}
+@media screen and (min-width: 1000px) {
+  .skill-content {
+    flex-direction: row;
+    align-items: flex-start;
   }
-  @media screen and (min-width: 1200px ) {
-    .skill-content {
-        width: var(--size-xl);
-    }
+  .skill-content .skill-container {
+    width: 400px;
   }
+  .IntroCard {
+    width: var(--size-small);
+  }
+  .IntroCard p {
+    font-size: 1.2rem;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .skill-content {
+    width: var(--size-xl);
+  }
+}
 
-  @media screen and (min-width: 2000px ) {
-    .skill-content {
-        width: var(--size-large);
-    }
+@media screen and (min-width: 2000px) {
+  .skill-content {
+    width: var(--size-large);
   }
+}
