--- a/client/src/assests/css/card.css
+++ b/client/src/assests/css/card.css
@@ -1,20 +1,64 @@
 .Project-container {
-    width: var(--size-large);
-    margin: 2rem 0;
-    flex-direction: column;
-  }
-  
-  .Project-container .project-info{
-    padding: var(--display-9);
-  }
-  
-  .Project-container .project-info:nth-child(odd){
-    flex-direction: row-reverse;
-  }
-  
-  
-  .Project-container .project-info .project-header{
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
+  width: var(--size-large);
+  margin: 2rem 0;
+  flex-direction:column;
+  gap: 1rem;
+}
+
+.Project-container .project-info {
+  padding: var(--display-9);
+  gap: 4rem;
+  flex-direction: column;
+}
+
+
+
+.Project-container .project-info .project-header {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.Project-container .project-info .project-header .btn-project {
+  padding: var(--display-9);
+  background-image: var(--linear-color-2);
+  color: var(bg-white);
+}
+.Project-container h2,
+p {
+  background: var(--linear-color-1);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+.Project-container h2 {
+  background-image: var(--linear-color-2);
+}
+
+.Project-container p {
+  background-image: var(--linear-color-3);
+  font-size: 1.2rem;
+  font-weight: 800;
+}
+
+.Project-container span {
+  color: var(--card-light);
+  font-size: 1.5rem;
+}
+
+@media screen and (min-width: 1200px) {
+    .Project-container {
+        width: var(--size-large);
+        margin: 2rem 0;
+        flex-direction: column;
+        gap: 1rem;
+      }
+      .Project-container .project-info {
+        padding: var(--display-9);
+        gap: 4rem;
+        flex-direction: row;
+      }
+    .Project-container .project-info:nth-child(odd) {
+        flex-direction: row-reverse;
+      }
+}
