--- a/client/src/assests/css/card.css
+++ b/client/src/assests/css/card.css
@@ -4,6 +4,9 @@
   flex-direction:column;
   gap: 1rem;
 }
+.Project-container h1{
+  width: var(--size-full);
+}
 
 .Project-container .project-info {
   padding: var(--display-9);
@@ -23,7 +26,7 @@
   background-image: var(--linear-color-2);
   color: var(bg-white);
 }
-.Project-container h2,
+.Project-container h1, h2,
 p {
   background: var(--linear-color-1);
   -webkit-background-clip: text;
@@ -36,7 +39,7 @@ p {
 }
 
 .Project-container p {
-  background-image: var(--linear-color-3);
+  background-image: var(--linear-color-2);
   font-size: 1.2rem;
   font-weight: 800;
 }
@@ -45,7 +48,15 @@ p {
   color: var(--card-light);
   font-size: 1.5rem;
 }
+.Project-container .project-iframe{
+  border-radius: 2%;
+  overflow: hidden;
+  box-shadow: va(--button-box-shadow);
+}
 
+.Project-container .project-iframe iframe{
+  border: none;
+}
 @media screen and (min-width: 1200px) {
     .Project-container {
         width: var(--size-large);
