--- a/client/src/assests/css/index.css
+++ b/client/src/assests/css/index.css
@@ -19,6 +19,7 @@
   --navbar-light-bg: rgb(250, 250, 250);
   --navbar-box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   --button-box-shadow: rgba(0, 0, 0, 0.628) 0px 3px 8px;
+  --container-box-shadow:rgba(0, 0, 0, 0.628) 0px 3px 8px; ;
   --input-border: 1px solid rgb(186, 186, 186);
   --light-border: 1px solid rgb(186, 186, 186);
   --dark-border: 1px solid rgb(77, 77, 77);
@@ -163,7 +164,7 @@ nav {
 .flex {
   display: flex;
   width: var(--size-full);
-  justify-content: center;
+  justify-content: center ;
   align-items: center;
   gap: 1rem;
 }
