--- a/client/src/assests/css/about.css
+++ b/client/src/assests/css/about.css
@@ -2,8 +2,7 @@
   flex-direction: column;
   width: var(--size-large);
 }
-.about-card h1 {
-  text-align: center;
+.about-card h1 , li {
   background: var(--linear-color-1);
   -webkit-background-clip: text;
   background-clip: text;
@@ -32,15 +31,22 @@
 }
 
 .about-container .about-card .hire-content ul li {
-    font-size: 1.5rem;
-}
+    font-size: 1.2rem;
 
+}
+.about-container .about-card  p{
+  font-size: 1.2rem;
+}
 @media screen and (min-width: 400px) {
     .about-container .about-card .about-image img {
-        width: 200px;
+        width: 300px;
     }
 }
-
+@media screen and (min-width: 600px) {
+  .about-container .about-card .about-image img {
+      width: 400px;
+  }
+}
 @media screen and (min-width: 900px) {
   .about-container .about-card {
     width: var(--size-xl);
@@ -55,7 +61,6 @@
   .about-container .about-card:nth-child(even) .about-image {
     justify-content: flex-start;
   }
- 
 }
 
 @media screen and (min-width: 1200px) {
