--- a/client/src/assests/css/index.css
+++ b/client/src/assests/css/index.css
@@ -24,6 +24,7 @@
   --light-border: 1px solid rgb(186, 186, 186);
   --dark-border: 1px solid rgb(77, 77, 77);
   --border-icon: 3px solid rgb(13, 99, 92);
+  --white-button-border: 3px solid rgb(234, 238, 238);
   --border-white: 2px solid rgb(186, 186, 186);
   --icon-span-color: rgb(25, 112, 96);
   --icon-color: rgb(63, 72, 70);
