--- a/client/src/assests/css/contact.css
+++ b/client/src/assests/css/contact.css
@@ -1,13 +1,13 @@
 .Contact {
   width: var(--size-full);
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   min-height: 20rem;
   background: var(--linear-color-6);
   margin-bottom: 5rem;
   box-shadow: var(--button-box-shadow);
   justify-content: space-evenly;
-  padding: var(--display-6);
+  padding: var(--display-1);
 }
 .Contact h2 {
   width: var(--size-full);
@@ -18,6 +18,15 @@
 .Contact .form-container {
   flex-direction: column;
 }
+.Contact .form-container .contact-info{
+    justify-content: flex-start;
+}
+
+.Contact .form-container p,
+.Contact .form-container .icon {
+    color:var(--card-light)
+  }
+  
 .Contact .form-container .contact-form {
   flex-direction: column;
   position: none;
@@ -74,12 +83,35 @@
    
 }
 
+.contact-icon{
+    display: none;
+}
+
+@media screen and (min-width:270px ){
+    .contact-icon{
+        display: flex;
+    }
+}
+@media screen and (min-width:600px ) {
+    .Contact {
+        width: var(--size-xl);
+        flex-direction: row;
+        padding: 1.5rem 1rem;
+      
+      }
+}
 
 @media screen and (min-width:900px ) {
     .Contact {
+        align-items: flex-start;
         width: var(--size-large);
-        flex-direction: row;
-        padding: 2rem 1rem;
-      
+        padding: 1rem 2rem;
+      }
+}
+
+@media screen and (min-width:1200px ) {
+    .Contact {
+        width: var(--size-small);
+        padding: 2rem 4rem;
       }
 }
