--- a/client/src/assests/css/index.css
+++ b/client/src/assests/css/index.css
@@ -29,7 +29,7 @@
   --icon-span-color: rgb(25, 112, 96);
   --icon-color: rgb(63, 72, 70);
   --light-bg: rgb(210, 208, 208);
-  --display-1: 0.5rem 0.25rem;
+  --display-1: 0.5rem 0.5rem;
   --display-2: 1rem 0.5rem;
   --display-3: 2rem 1rem;
   --display-4: 4rem 2rem;
@@ -139,6 +139,9 @@
   list-style: none;
   font-family: "Open Sans", sans-serif;
   transition: 0.5s ease-in-out;
+}
+body::-webkit-scrollbar{
+  display: none !important;
 }
 
 .About{
