--- a/client/src/assests/css/index.css
+++ b/client/src/assests/css/index.css
@@ -19,6 +19,7 @@
   --navbar-light-bg: rgb(250, 250, 250);
   --navbar-box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   --button-box-shadow: rgba(0, 0, 0, 0.628) 0px 3px 8px;
+  --box-shadow-card: rgba(100, 100, 111, 0.2) 0px 7px 15px 0px;
   --container-box-shadow:rgba(0, 0, 0, 0.628) 0px 3px 8px; ;
   --input-border: 1px solid rgb(186, 186, 186);
   --light-border: 1px solid rgb(186, 186, 186);
@@ -26,6 +27,7 @@
   --border-icon: 3px solid rgb(13, 99, 92);
   --white-button-border: 3px solid rgb(234, 238, 238);
   --border-white: 2px solid rgb(186, 186, 186);
+  --border-white2: 1px solid rgb(186, 186, 186);
   --icon-span-color: rgb(25, 112, 96);
   --icon-color: rgb(63, 72, 70);
   --light-bg: rgb(210, 208, 208);
@@ -43,10 +45,11 @@
   --size-xl: 90%;
   --size-large: 85%;
   --size-medium: 80%;
+  --size-smedium: 75%;
   --size-small: 70%;
   --size-half: 50%;
   --size-form: 350px;
-  --size-blog: 255px;
+  --size-blog: 240px;
   --linear-button: linear-gradient(
     to right top,
     #062c29,
