--- a/client/src/assests/css/admin.css
+++ b/client/src/assests/css/admin.css
@@ -63,7 +63,7 @@
     outline: none;
     padding: var(--display-3);
     border-radius: 20px;
-    overflow: autoewf;
+    overflow: auto;
     resize: none;
     font-size: 1rem;
 }
@@ -113,6 +113,15 @@
     flex-direction: column;
 }
 
+.Login-Panel{
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 10rem;
+}
+.Admin-Panel .login{
+    max-width: 25rem;
+}
+
 @media screen and ( min-width: 400px ) {
     .Admin-Panel .admin-container .admin-card button{
         padding: var(--display-5);
@@ -127,27 +136,15 @@
 @media screen and ( min-width: 900px ) {
     .Admin-Panel{
         flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
         width: var(--size-xl );
-        min-height: 95vh;
        }
        .Admin-Panel .admin-container {
         justify-content: space-around;
         flex-direction: row;
        }     
 }
-
-@media screen and ( min-width: 1024px ) {
-
-}
-
 @media screen and ( min-width: 1200px ) {
     .Admin-Panel{
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-        width: var(--size-small);
-        min-height: 95vh;
+        width: var(--size-small);  
        }
 }
