--- a/client/src/assests/css/blog.css
+++ b/client/src/assests/css/blog.css
@@ -1,131 +1,272 @@
 /* Blog  */
-.Blog{
-    width: var(--size-full);
-    flex-direction: column;
+.Blog {
+  width: var(--size-full);
+  flex-direction: column;
 }
 
-.User-blog{
-    width: var(--size-full);
-    min-height: 90vh;
-    justify-content: flex-start;   
-    flex-direction: column;
-    align-items: center;
-    
+.User-blog {
+  width: var(--size-full);
+  min-height: 90vh;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
 }
-.User-blog .single-blog-container{
+.User-blog .single-blog-container {
   width: var(--size-large);
   padding: var(--display-9);
-  height: 14rem ;
+  height: 14rem;
   border-radius: 8px;
   box-shadow: var(--box-shadow-card);
   border: var(--border-white2);
 }
 
-.User-blog .single-blog-container a{
+.User-blog .single-blog-container a {
   flex-direction: column;
   align-items: flex-start;
 }
 
-
 /* Blog Details */
 
-.Blog-Details{
+.Blog-Details {
   width: var(--size-xl);
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
   height: 95vh;
 }
-.Blog-Details h2{
+.Blog-Details h2 {
   color: black;
+}
 
- }
+.Blog-Details .single-blog {
+  width: var(--size-full);
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  border: var(--border-white2);
+  width: var(--size-full);
+  padding: var(--display-9);
+  box-shadow: var(--box-shadow-card);
+  border-radius: 5px;
+  padding-bottom: 2rem;
+  min-height: 90vh;
+}
+.Blog-Details .other-blog {
+  width: var(--size-full);
+  flex-direction: column;
+  align-items: flex-start;
+}
+.Blog-Details .other-blog .blog-link {
+  border: var(--border-white2);
+  width: var(--size-full);
+  padding: var(--display-9);
+  box-shadow: var(--box-shadow-card);
+  border-radius: 5px;
+}
 
-.Blog-Details .single-blog{
-    width: var(--size-full);
+.Blog-Details .single-blog .single-blog-header {
+  padding-bottom: 1rem;
+}
+
+/* Blog-management */
+
+.Blog-Panel {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: var(--size-full);
+  min-height: 95vh;
+}
+.Blog-Panel .admin-container {
+  width: var(--size-xxl);
+  margin: 1rem 0.5rem;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.Blog-Panel .admin-container .admin-form,
+.Blog-Panel .admin-container .admin-card {
+  gap: 0.5rem;
+}
+.Blog-Panel .admin-container .single-card {
+  justify-content: space-between;
+  padding: var(--display-7);
+  border-radius: 8px;
+  box-shadow: var(--box-shadow-card);
+  border: var(--border-white2);
+  flex-direction: column;
+}
+
+.Blog-Panel .admin-container .single-card span {
+  font-size: 1.2rem;
+  font-weight: 700;
+  padding: var(--display-7);
+}
+
+.Blog-Panel .admin-container .admin-form form {
+  min-height: 20rem;
+  padding: var(--display-7);
+  border-radius: 8px;
+  box-shadow: var(--box-shadow-card);
+  border: var(--border-white2);
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.Blog-Panel .admin-container .admin-form form .form-card{
     flex-direction: column;
+
+}
+
+.Blog-Panel .admin-container .admin-form form input{
+  width: var(--size-full);
+  border: var(--border-white);
+  outline: none;
+  padding: var(--display-8);
+  border-radius: 20px;
+}
+
+.Blog-Panel .admin-container .admin-form .edit-form h2{
+    width: var(--size-full);
+}
+
+.Blog-Panel .admin-container .admin-form form .btn-send{
+    border: none;
+    width: var(--size-full);
+    outline: none;
+    position: relative;
+    cursor: pointer;
+    top: 0;
+    margin-top: 1rem;
+    background: var(--linear-button);
+    padding: var(--display-9);
+    color: var(--light-color);
+    border-radius: 20px;
+    transition: 0.4s top ease-in-out;
+}
+.Blog-Panel .admin-container .admin-form form .quill{
+    width: var(--size-full);
+}
+.Blog-Panel .admin-container .admin-form form .ql-editor{
+    height: 15rem;
+    padding: var(--display-3);
+    overflow: auto;
+    resize: none;
+    font-size: 1rem;
+}
+.Blog-Panel .admin-container .admin-form form .ql-toolbar {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+.Blog-Panel .admin-container .admin-form form .ql-container{
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+.Blog-Panel .admin-container .admin-card .single-card button{
+    background: var(--linear-button);
+    width: var(--size-half);
+    padding: var(--display-9);
+    color: var(--light-color);
+    cursor: pointer;
+    border-radius: 15px ;
+    outline: none;
+    border: none;
+    transition: transform 0.2s ;
+}
+.Blog-Panel .admin-container .admin-card button:active{
+    transform: scale(0.9);
+}
+.Blog-Panel .admin-container .admin-card button svg{
+  font-size: 1.4rem;
+}
+.Blog-Panel .admin-container .admin-form form button:active{
+    top: 5px;
+}
+.Blog-Panel .admin-container .admin-card,
+.Blog-Panel .admin-container .admin-form{
+    flex-direction: column;
+}
+
+@media screen and ( min-width: 400px ) {
+    .Blog-Panel .admin-container .admin-card .single-card button{
+        padding: var(--display-5);
+        border-radius:100% ;
+        width: max-content;
+    }
+  .Blog-Panel .admin-container .single-card{
+    flex-direction: row;
+  }
+}
+
+
+
+@media screen and (min-width: 560px) {
+  .User-blog {
+    width: var(--size-xl);
+    justify-content: flex-start;
+    flex-direction: row;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    align-content: flex-start;
+  }
+  .User-blog .single-blog-container {
+    width: var(--size-blog);
+  }
+  .Blog-Details {
+    flex-direction: row;
+  }
+  .Blog-Details .other-blog {
+    justify-content: flex-start;
+    width: 15rem;
+    height: 90vh;
+    padding-right: 1rem;
+    scroll-snap-type: none;
+    overflow: auto;
+    overflow-x: hidden;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .User-blog .single-blog-container {
+    width: var(--size-blog);
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .User-blog {
+    width: var(--size-medium);
+  }
+  .Blog-Panel{
+    width: var(--size-xl );
+   }
+   .Blog-Panel .admin-container {
+    justify-content: space-around;
+    flex-direction: row;
+   }  
+}
+
+@media screen and (min-width: 1024px) {
+  .User-blog {
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
+  .Blog-Details {
+    width: var(--size-small);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .User-blog {
+    width: var(--size-small);
+  }
+  .Blog-Details {
+    gap: 1.5rem;
+  }
+  .Blog-Panel{
+    flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
-    border: var(--border-white2);
-    width: var(--size-full);
-    padding: var(--display-9);
-    box-shadow: var(--box-shadow-card);
-    border-radius: 5px;
-    padding-bottom: 2rem;
-    min-height: 90vh;
-}
-.Blog-Details .other-blog{
-    width: var(--size-full);
-    flex-direction: column;
-    align-items: flex-start;
- }
- .Blog-Details .other-blog .blog-link{
-    border: var(--border-white2);
-    width: var(--size-full);
-    padding: var(--display-9);
-    box-shadow: var(--box-shadow-card);
-    border-radius: 5px;
- }
-
-.Blog-Details .single-blog .single-blog-header{
-    padding-bottom: 1rem;
-}
-@media screen and ( min-width: 560px ) {
-    .User-blog{
-        width: var(--size-xl);
-        justify-content:flex-start;   
-        flex-direction: row;
-        align-items: flex-start;
-        flex-wrap: wrap;
-        align-content: flex-start;
-    }
-    .User-blog .single-blog-container{
-        width: var(--size-blog);
-    }
-    .Blog-Details{
-        flex-direction: row;
-    }
-    .Blog-Details .other-blog{
-        justify-content: flex-start;
-        width: 15rem;
-        height: 90vh;
-        padding-right: 1rem;
-        scroll-snap-type: none;
-        overflow: auto;
-        overflow-x: hidden;
-
-    }
-    
-}
-
-@media screen and ( min-width: 600px ) {
-    .User-blog .single-blog-container{
-        width: var(--size-blog);
-      }
-}
-
-
-@media screen and ( min-width: 900px ) {
-    .User-blog {
-        width: var(--size-medium);
-      }
-}
-
-@media screen and ( min-width: 1024px ) {
-    .User-blog {
-       justify-content: center;
-       flex-wrap: nowrap;
-      }
-    .Blog-Details {
-        width: var(--size-small);
-      }
-}
-
-@media screen and ( min-width: 1200px ) {
-    .User-blog{
-        width: var(--size-small);
-    }
-    .Blog-Details {
-        gap: 1.5rem;
-      }
+    width: var(--size-small);
+    min-height: 95vh;
+   }
 }
