--- a/client/src/assests/css/card.css
+++ b/client/src/assests/css/card.css
@@ -1,10 +1,10 @@
 .Project-container {
   width: var(--size-large);
   margin: 2rem 0;
-  flex-direction:column;
+  flex-direction: column;
   gap: 1rem;
 }
-.Project-container h1{
+.Project-container h1 {
   width: var(--size-full);
 }
 
@@ -13,8 +13,6 @@
   gap: 4rem;
   flex-direction: column;
 }
-
-
 
 .Project-container .project-info .project-header {
   flex-direction: column;
@@ -26,7 +24,8 @@
   background-image: var(--linear-color-2);
   color: var(bg-white);
 }
-.Project-container h1, h2,
+.Project-container h1,
+h2,
 p {
   background: var(--linear-color-1);
   -webkit-background-clip: text;
@@ -48,33 +47,29 @@ p {
   color: var(--card-light);
   font-size: 1.5rem;
 }
-.Project-container .project-iframe{
+.Project-container .project-iframe {
   border-radius: 2%;
-  overflow: hidden ;
+  overflow: hidden;
   box-shadow: va(--button-box-shadow);
-  
 }
 
-.Project-container .project-iframe iframe{
+.Project-container .project-iframe iframe {
   border: none;
- 
 }
-
-
 
 @media screen and (min-width: 1200px) {
-    .Project-container {
-        width: var(--size-small);
-        margin: 2rem 0;
-        flex-direction: column;
-        gap: 1rem;
-      }
-      .Project-container .project-info {
-        padding: var(--display-9);
-        gap: 4rem;
-        flex-direction: row;
-      }
-    .Project-container .project-info:nth-child(odd) {
-        flex-direction: row-reverse;
-      }
+  .Project-container {
+    width: var(--size-small);
+    margin: 2rem 0;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .Project-container .project-info {
+    padding: var(--display-9);
+    gap: 4rem;
+    flex-direction: row;
+  }
+  .Project-container .project-info:nth-child(odd) {
+    flex-direction: row-reverse;
+  }
 }
