--- a/client/src/assests/css/index.css
+++ b/client/src/assests/css/index.css
@@ -20,7 +20,7 @@
   --navbar-box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   --button-box-shadow: rgba(0, 0, 0, 0.628) 0px 3px 8px;
   --box-shadow-card: rgba(100, 100, 111, 0.2) 0px 7px 15px 0px;
-  --container-box-shadow:rgba(0, 0, 0, 0.628) 0px 3px 8px; ;
+  --container-box-shadow: rgba(0, 0, 0, 0.628) 0px 3px 8px;
   --input-border: 1px solid rgb(186, 186, 186);
   --light-border: 1px solid rgb(186, 186, 186);
   --dark-border: 1px solid rgb(77, 77, 77);
@@ -133,7 +133,21 @@
     #fcfcfc,
     #ffffff
   );
-  --linear-color-6: linear-gradient(to right top, #323b3c, #36484a, #395657, #3c6464, #3f7271, #3f7271, #3f7270, #3f7270, #3c6463, #395656, #364949, #323c3c);
+  --linear-color-6: linear-gradient(
+    to right top,
+    #323b3c,
+    #36484a,
+    #395657,
+    #3c6464,
+    #3f7271,
+    #3f7271,
+    #3f7270,
+    #3f7270,
+    #3c6463,
+    #395656,
+    #364949,
+    #323c3c
+  );
 }
 * {
   box-sizing: border-box;
@@ -143,11 +157,11 @@
   font-family: "Open Sans", sans-serif;
   transition: 0.5s ease-in-out;
 }
-body::-webkit-scrollbar{
+body::-webkit-scrollbar {
   display: none !important;
 }
 
-.About{
+.About {
   flex-direction: column;
   align-items: center;
 }
@@ -171,14 +185,14 @@ nav {
 .flex {
   display: flex;
   width: var(--size-full);
-  justify-content: center ;
+  justify-content: center;
   align-items: center;
   gap: 1rem;
 }
 .icon {
   font-size: 2rem;
-  color:#063a36;
-  transition: .2s ease-in-out;
+  color: #063a36;
+  transition: 0.2s ease-in-out;
 }
 .icon:hover {
   color: black;
@@ -202,17 +216,17 @@ nav {
   align-items: center;
 }
 
-.btn-cv{
+.btn-cv {
   width: var(--size-xl);
   border: none;
   outline: none;
   background: transparent;
   padding: var(--display-8);
   border-bottom: var(--border-icon);
- cursor: pointer;
+  cursor: pointer;
 }
 
-.btn-cv span{
+.btn-cv span {
   font-size: 1.5rem;
   font-weight: 900;
   -webkit-background-clip: text;
@@ -221,22 +235,17 @@ nav {
   background-image: var(--linear-color-1);
 }
 
-.btn-cv:hover span{
-  color: var(--white-bg)
+.btn-cv:hover span {
+  color: var(--white-bg);
 }
 
-.btn-cv:hover{
+.btn-cv:hover {
   border: none;
   background: var(--linear-color-1);
- 
 }
 
-
-
-
-
 @media screen and (min-width: 400px) {
-  .btn-cv{
+  .btn-cv {
     width: var(--size-blog);
   }
 }
